# xia_eeg_toolkit

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
test/: all_sub_data_with_param.csv  sub01-reject-log.npz  test.py  test_single_trials.py
xia_eeg_toolkit/: __init__.py  erp.py  freq.py  lrp.py  preprocess.py  single_trials.py
