[tool.poetry]
name = "xia-eeg-workflow"
version = "0.1.0"
description = ""
authors = ["Xiaokai Xia <dddd1007@gmail.com>"]
readme = "README.md"
packages = [{include = "xia_eeg_workflow"}]

[tool.poetry.dependencies]
python = "^3.10"
mne = "^1.3.0"
numpy = "^1.24.2"
autoreject = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
