[tool.poetry]
name = "xia-eeg-toolkit"
version = "0.1.0"
description = ""
authors = ["Xiaokai Xia <dddd1007@gmail.com>"]
readme = "README.md"
packages = [{include = "xia_eeg_toolkit"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
